force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <formula>SVMXC__Company__r.BillingCity</formula>
    <label>Account Country</label>
    <type>Text</type>
</CustomField>