force-app/main/default/objects/SVMXC__Installed_Product__c/fields/BSL_Level__c.field-meta.xml
<CustomField>
    <fullName>BSL_Level__c</fullName>
    <description>Set of biocontainment precautions required to isolate dangerous biological agents in an enclosed laboratory facility where Installed Product is located.</description>
    <label>BSL Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>