force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Date__c</fullName>
    <description>Field to store Contract Date.</description>
    <label>Contract Date</label>
    <type>Date</type>
</CustomField>