force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <description>Cost center for Installed Product</description>
    <label>Cost Center</label>
    <length>10</length>
    <type>Text</type>
</CustomField>