force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Country_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Origin__c</fullName>
    <description>Origin country of Installed Product</description>
    <label>Country of Origin</label>
    <length>30</length>
    <type>Text</type>
</CustomField>