force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>Formula Field to populate Currency from CurrencyIsoCode field.</description>
    <formula>TEXT(CurrencyIsoCode)</formula>
    <label>Currency</label>
    <type>Text</type>
</CustomField>