force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Currently_Active_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Currently_Active_Contract_Type__c</fullName>
    <description>Currently Active Contract Type</description>
    <formula>TEXT( Currently_Active_Service_Contract__r.Type__c )</formula>
    <label>Currently Active Contract Type</label>
    <type>Text</type>
</CustomField>