force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Currently_Active_Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Currently_Active_Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current Active Service Contract</description>
    <label>Currently Active Service Contract</label>
    <referenceTo>SVMXC__Service_Contract__c</referenceTo>
    <relationshipLabel>Installed Products (Currently Active Service Contract)</relationshipLabel>
    <relationshipName>Installed_Products</relationshipName>
    <type>Lookup</type>
</CustomField>