force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Datastore_Email__c.field-meta.xml
<CustomField>
    <fullName>Datastore_Email__c</fullName>
    <description>Capture datastore email id</description>
    <label>Datastore Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>