force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Deinstall_Date__c.field-meta.xml
<CustomField>
    <fullName>Deinstall_Date__c</fullName>
    <description>To populate the de-installed date based on completion of work order</description>
    <label>Deinstall Date</label>
    <type>Date</type>
</CustomField>