force-app/main/default/objects/SVMXC__Installed_Product__c/fields/ERP_Equipment_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Equipment_ID__c</fullName>
    <description>To capture ERP equipment id
Generated from SAP integration</description>
    <externalId>true</externalId>
    <label>ERP Equipment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>