force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>To capture the expiry date of installed product
Source: SAP Integration</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>