force-app/main/default/objects/SVMXC__Installed_Product__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
	<description>Used for the proactive integration to match with a SFDC Installed Product record in the proactive JSON automation. Could not use existing Serial/Lot Number field because it is managed by SVMX and could not make it an external ID. Filled by automation.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>