force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Fluidics_Notes__c.field-meta.xml
<CustomField>
    <fullName>Fluidics_Notes__c</fullName>
    <description>Field to capture details of technical attribute &apos;Fluidics Notes&apos;</description>
    <label>Fluidics Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>