force-app/main/default/objects/SVMXC__Installed_Product__c/fields/FPGA_Version__c.field-meta.xml
<CustomField>
    <fullName>FPGA_Version__c</fullName>
    <description>Field to capture technical attribute from IQ/OQ form.</description>
    <label>FPGA Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>