force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Hamilton_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Hamilton_Serial_Number__c</fullName>
    <description>Serial Number of the Hamilton Instrument. Manually populated by Field Service users.</description>
    <label>Hamilton Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>