force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Image_Version_Dx__c.field-meta.xml
<CustomField>
    <fullName>Image_Version_Dx__c</fullName>
    <description>Field to capture Image Version (Dx) details from IQ/OQ form</description>
    <label>Image Version (Dx)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>