force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Installed__c.field-meta.xml
<CustomField>
    <fullName>Installed__c</fullName>
    <description>Need to know how many</description>
    <label># Installed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>