force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Installed_Product_Date__c.field-meta.xml
<CustomField>
    <fullName>Installed_Product_Date__c</fullName>
    <description>Automatically checked if the created date is greater than date installed.</description>
    <formula>IF( CreatedDate   &gt; DATETIMEVALUE( SVMXC__Date_Installed__c ) , true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installed Product Date</label>
    <type>Checkbox</type>
</CustomField>