force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Installed_Product_Upgrade_Type__c.field-meta.xml
<CustomField>
    <fullName>Installed_Product_Upgrade_Type__c</fullName>
    <description>Picklist field to choose Installed Product Upgrade Type.</description>
    <label>Installed Product Upgrade Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
                <default>true</default>
                <label>NONE</label>
            </value>
            <value>
                <fullName>IVD</fullName>
            </value>
            <value>
                <fullName>RUO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>