force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Instance_Detail__c.field-meta.xml
<CustomField>
    <fullName>Instance_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates to Instances</description>
    <label>Instance Detail</label>
    <referenceTo>Instance_Details__c</referenceTo>
    <relationshipLabel>Installed Products</relationshipLabel>
    <relationshipName>Installed_Products</relationshipName>
    <type>Lookup</type>
</CustomField>