force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Instrument_Notes__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Notes__c</fullName>
    <description>Field to capture details for technical attribute &apos;Instrument Notes&apos;</description>
    <label>Instrument Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>