force-app/main/default/objects/SVMXC__Installed_Product__c/fields/IP_Serial_no_Auto_No__c.field-meta.xml
<CustomField>
    <fullName>IP_Serial_no_Auto_No__c</fullName>
    <description>Auto Number field to display Installed product serial number.</description>
    <displayFormat>{00000000}</displayFormat>
    <label>IP Serial no - Auto No</label>
    <type>AutoNumber</type>
</CustomField>