force-app/main/default/objects/SVMXC__Installed_Product__c/fields/IQ_OQ_For_IB_Attributes_JSON__c.field-meta.xml
<CustomField>
    <fullName>IQ_OQ_For_IB_Attributes_JSON__c</fullName>
    <description>JSON of the IB attributes entered by the user in IQ/OQ form</description>
    <label>IQ/OQ For IB Attributes JSON</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>