force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Is_Product_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Is_Product_Blocked__c</fullName>
    <description>To block the Part Order Line if the Product&apos;s Cross Plant Material Status value contains Y6, Y7, Y8, Z0, Z1, Z2</description>
    <formula>AND(
NOT(ISBLANK(SVMXC__Product__c)), SVMXC__Product__r.Is_Product_Blocked__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Product Blocked</label>
    <type>Checkbox</type>
</CustomField>