force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Last_PM_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_PM_Date__c</fullName>
    <description>To capture the latest Preventive Maintenance Date</description>
    <label>Last PM Date</label>
    <type>Date</type>
</CustomField>