force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Last_Refresh_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Refresh_Date__c</fullName>
    <description>Captures the last refresh date on Loaner Instruments. Filled manually Global Field Service Logistics.</description>
    <label>Last Refresh Date</label>
    <type>Date</type>
</CustomField>