force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Last_SW_Config_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_SW_Config_Date__c</fullName>
    <description>Field to capture Last SW Config Date details from IQ/OQ form.</description>
    <label>Last SW Config Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>