force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Last_Upgrade_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Upgrade_Date__c</fullName>
    <description>Updated from Technical Attributes trigger. Captured from Last Upgrade Day, Month and Year attributes on TA.</description>
    <label>Last Upgrade Date</label>
    <type>Date</type>
</CustomField>