force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Latest_Expiring_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Expiring_Contract_End_Date__c</fullName>
    <description>Latest expiring Contract End Date</description>
    <formula>Latest_Expiring_Service_Contract__r.SVMXC__End_Date__c</formula>
    <label>Latest Expiring Contract End Date</label>
    <type>Date</type>
</CustomField>