force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Latest_Loaner_Agreement_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Loaner_Agreement_Signature_Date__c</fullName>
    <description>To get the most recent Loaner Agreement signature date. Source-Automation</description>
    <label>Latest Loaner Agreement Signature Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>