force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Location_Covered__c.field-meta.xml
<CustomField>
    <fullName>Location_Covered__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to map Installed Product to Location Covered record</description>
    <label>Location Covered</label>
    <referenceTo>SVMXC__Service_Group_Site__c</referenceTo>
    <relationshipLabel>Tools</relationshipLabel>
    <relationshipName>Installed_Products</relationshipName>
    <type>Lookup</type>
</CustomField>