force-app/main/default/objects/SVMXC__Installed_Product__c/fields/LRM_Not_Applicable_RUO__c.field-meta.xml
<CustomField>
    <fullName>LRM_Not_Applicable_RUO__c</fullName>
    <description>Field to capture LRM Not Applicable (RUO) details from IQ/OQ form.</description>
    <label>LRM Not Applicable (RUO)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>