force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Material_Class__c.field-meta.xml
<CustomField>
    <fullName>Material_Class__c</fullName>
    <description>Product Class for Installed Product
Generated from formula field</description>
    <formula>TEXT( SVMXC__Product__r.Material_Class__c )</formula>
    <label>Material Class</label>
    <type>Text</type>
</CustomField>