force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Material_Number__c</fullName>
    <description>PN</description>
    <formula>SVMXC__Product__r.Material_Number__c</formula>
    <label>Material Number</label>
    <type>Text</type>
</CustomField>