force-app/main/default/objects/SVMXC__Installed_Product__c/fields/MiSeq_System_Suite_RUO__c.field-meta.xml
<CustomField>
    <fullName>MiSeq_System_Suite_RUO__c</fullName>
    <description>Field to capture MiSeq System Suite (RUO) technical attribute details from IQ/OQ form</description>
    <label>MiSeq System Suite (RUO)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>