force-app/main/default/objects/SVMXC__Installed_Product__c/fields/MSR_Genomes_Dx__c.field-meta.xml
<CustomField>
    <fullName>MSR_Genomes_Dx__c</fullName>
    <description>Field to capture MSR Genomes (Dx) details from IQ/OQ form</description>
    <label>MSR Genomes (Dx)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>