force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Operation_Status__c.field-meta.xml
<CustomField>
    <fullName>Operation_Status__c</fullName>
    <description>This field will be On when the Installed Product is Up and Off when the Installed Product is Down.</description>
    <inlineHelpText>This field will be On when the Installed Product is Up and Off when the Installed Product is Down.</inlineHelpText>
    <label>Operation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On</fullName>
            </value>
            <value>
                <fullName>Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>