force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Optical_Systems_Notes__c.field-meta.xml
<CustomField>
    <fullName>Optical_Systems_Notes__c</fullName>
    <description>Field to capture details for technical attribute &apos;Optical Systems Notes&apos;</description>
    <label>Optical Systems Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>