force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Proactive_Last_Connected_Date__c.field-meta.xml
<CustomField>
    <fullName>Proactive_Last_Connected_Date__c</fullName>
	<description>Used to identify the last time an instrument connected with Proactive. Filled from Proactive by automation.</description>
    <label>Proactive Last Connected Date</label>
    <type>Date</type>
</CustomField>