force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <description>Automatically populate value from Product Category field on Product associated with Installed Product.</description>
    <formula>TEXT(SVMXC__Product__r.Product_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Category</label>
    <type>Text</type>
</CustomField>