force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Product_Code1__c.field-meta.xml
<CustomField>
    <fullName>Product_Code1__c</fullName>
    <description>This field is used to store Product Code value from Installed Product rest interface.</description>
    <externalId>true</externalId>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>