force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <formula>TEXT(SVMXC__Product__r.Product_Group__c)</formula>
    <label>Product Group</label>
    <type>Text</type>
</CustomField>