force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Product_Regulatory_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Regulatory_Type__c</fullName>
    <formula>SVMXC__Product__r.Regulatory_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Regulatory Type</label>
    <type>Text</type>
</CustomField>