force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Recipe_Fragment_Version_RUO__c.field-meta.xml
<CustomField>
    <fullName>Recipe_Fragment_Version_RUO__c</fullName>
    <description>Field to capture Recipe Fragment Version (RUO) details from IQ/OQ form</description>
    <label>Recipe Fragment Version (RUO)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>