force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>To capture region of account associated with installed product
Generated automatically from formula field</description>
    <formula>SVMXC__Company__r.Territory_Region__c</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>