force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Regulatory_Type__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Type__c</fullName>
    <description>This field has been created as part of DCP-3090</description>
    <label>Regulatory Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DX</fullName>
            </value>
            <value>
                <fullName>RUO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>