force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Requires_QA_Regression__c.field-meta.xml
<CustomField>
    <fullName>Requires_QA_Regression__c</fullName>
    <description>Flag to determine required QA regression</description>
    <defaultValue>false</defaultValue>
    <label>Requires QA Regression</label>
    <type>Checkbox</type>
</CustomField>