force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Sent_to_Qualtrics__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Qualtrics__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>Qualtrics Surveys: This checkbox will be checked whenever an Installed Product record
triggers a Qualtrics Survey</description>
    <label>Sent to Qualtrics</label>
    <type>Checkbox</type>
</CustomField>