force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Server_Notes__c.field-meta.xml
<CustomField>
    <fullName>Server_Notes__c</fullName>
    <description>Field to capture details of technical attribute &apos;Server Notes&apos;</description>
    <label>Server Notes</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>