force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Service_Bill_Of_Materials__c.field-meta.xml
<CustomField>
    <fullName>Service_Bill_Of_Materials__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Service BOM. 
To be populated from SAP.</description>
    <label>Service Bill Of Materials</label>
    <referenceTo>Service_Bill_Of_Materials__c</referenceTo>
    <relationshipLabel>Installed Products</relationshipLabel>
    <relationshipName>Installed_Products</relationshipName>
    <type>Lookup</type>
</CustomField>