force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Service_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Product_Type__c</fullName>
    <description>Formula field that Indicates whether the Installed Product is Instrument, Spare, Core or Consumable. Used in various business logic and automations.</description>
    <formula>TEXT(SVMXC__Product__r.Service_Product_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Product Type</label>
    <type>Text</type>
</CustomField>