force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Software_Firmware_Notes__c.field-meta.xml
<CustomField>
    <fullName>Software_Firmware_Notes__c</fullName>
    <description>Field to capture details for technical attribute &apos;Software/Firmware Notes&apos;</description>
    <label>Software/Firmware Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>