force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Software_Notes__c.field-meta.xml
<CustomField>
    <fullName>Software_Notes__c</fullName>
    <description>Field to capture details of technical attribute &apos;Software Notes&apos;</description>
    <label>Software Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>