force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Software_version__c.field-meta.xml
<CustomField>
    <fullName>Software_version__c</fullName>
    <description>Software version</description>
    <label>Software version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>