force-app/main/default/objects/SVMXC__Installed_Product__c/fields/SVMX_PS_IP_Count__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_IP_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installed Product Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>