force-app/main/default/objects/SVMXC__Installed_Product__c/fields/SVMX_PS_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Serial_Number__c</fullName>
    <description>Unique serial number field that is used to prevent duplicate IPs from being adding to the database by throwing a duplicate error message.</description>
    <label>Dup Serial Number Check</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>