force-app/main/default/objects/SVMXC__Installed_Product__c/fields/SVMX_PS_VS_Cloned_From_IP__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_VS_Cloned_From_IP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field represents the field from which the Installed Product was cloned/created when doing Part Swap</description>
    <inlineHelpText>This field represents the field from which the Installed Product was cloned/created when doing Part Swap</inlineHelpText>
    <label>Cloned From IP</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>Installed Products (Cloned From IP)</relationshipLabel>
    <relationshipName>SVMX_PS_VS_Cloned_From_IP</relationshipName>
    <type>Lookup</type>
</CustomField>