force-app/main/default/objects/SVMXC__Installed_Product__c/fields/SVMXC__Company__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the customer account for this installed product. Lookup to an existing salesforce account record</description>
    <inlineHelpText>Name of the customer account for this installed product. Lookup to an existing salesforce account record</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>R00N70000001hzZ0EAI</relationshipName>
    <type>Lookup</type>
</CustomField>