force-app/main/default/objects/SVMXC__Installed_Product__c/fields/SVMXC__Installation_Notes__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Installation_Notes__c</fullName>
    <description>Any technical information relevant for the service organization. This is normally supplied by field service engineers upon completion of installation</description>
    <inlineHelpText>Any technical information relevant for the service organization. This is normally supplied by field service engineers upon completion of installation</inlineHelpText>
    <label>Installation Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>