force-app/main/default/objects/SVMXC__Installed_Product__c/fields/SVMXC__Parent__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Serial/Lot number of the parent product in the installed product hierarchy. This is a lookup to an existing installed product record.</description>
    <inlineHelpText>Serial/Lot number of the parent product in the installed product hierarchy. This is a lookup to an existing installed product record.</inlineHelpText>
    <label>Parent</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipName>R00N70000001hzcgEAA</relationshipName>
    <type>Lookup</type>
</CustomField>